# pleme-codegen

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  PATTERN_MACROS.md  README.md  flake.nix
scripts/: validate_macro_quality.sh
src/: brazilian.rs  brazilian_patterns.rs  brazilian_payment_entity.rs  cached_repository.rs  database_mapper.rs  domain.rs  graphql.rs  identifier_patterns.rs  lib.rs  payment_patterns.rs  repository.rs  repository_helpers.rs  service.rs  simple_domain.rs  status_patterns.rs  subscription_patterns.rs  transactional_repository.rs  utils.rs  validation_patterns.rs  wallet_patterns.rs
tests/: macro_tests.rs  payment_macros_test.rs  performance_test.rs  simple_test.rs
